# PhantomOperaAI

./: .gitignore  CMakeLists.txt  README.md  readme.txt
includes/: BoardException.hpp  BoardScorer.hpp  Character.hpp  CharacterMove.hpp  Color.hpp  FantomAI.hpp  GameData.hpp  GameState.hpp  InspectorAI.hpp  KeyEvaluator.hpp  Logger.hpp  Move.hpp  Net.hpp  NetException.hpp  Question.hpp  Tile.hpp  TileMove.hpp  Tiles.hpp  TreeHandler.hpp
srcs/: BoardScorer.cpp  Character.cpp  CharacterMove.cpp  Color.cpp  FantomAI.cpp  GameData.cpp  GameState.cpp  InspectorAI.cpp  KeyEvaluator.cpp  Logger.cpp  Net.cpp  Question.cpp  Tile.cpp  TileMove.cpp  Tiles.cpp  TreeHandler.cpp  main.cpp  main_test.cpp
